@@ -11,8 +11,8 @@
   <name>${project.groupId}:${project.artifactId}</name>
 
   <properties>
-    <specification-arg-resolver.version>2.18.1</specification-arg-resolver.version>
-    <springdoc.version>1.6.14</springdoc.version>
+    <specification-arg-resolver.version>3.1.0</specification-arg-resolver.version>
+    <springdoc.version>2.3.0</springdoc.version>
   </properties>
 
   <dependencies>
@@ -39,13 +39,12 @@
       <artifactId>lombok</artifactId>
     </dependency>
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.17</version>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-ui</artifactId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
       <version>${springdoc.version}</version>
     </dependency>
 
@@ -77,14 +76,16 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>pl.project13.maven</groupId>
-        <artifactId>git-commit-id-plugin</artifactId>
+        <groupId>io.github.git-commit-id</groupId>
+        <artifactId>git-commit-id-maven-plugin</artifactId>
+        <version>7.0.0</version>
       </plugin>
       <plugin>
         <groupId>com.google.cloud.tools</groupId>
         <artifactId>jib-maven-plugin</artifactId>
         <configuration>
           <from>
+            <image>eclipse-temurin:21-jre</image>
             <platforms>
               <platform>
                 <architecture>amd64</architecture>
@@ -98,6 +99,16 @@
           </from>
           <container>
             <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
+            <jvmFlags>
+              <jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
+              <jvmFlag>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmFlag>
+              <jvmFlag>--add-opens=java.base/java.io=ALL-UNNAMED</jvmFlag>
+              <jvmFlag>--add-opens=java.base/java.net=ALL-UNNAMED</jvmFlag>
+              <jvmFlag>--add-opens=java.base/java.nio=ALL-UNNAMED</jvmFlag>
+              <jvmFlag>--add-opens=java.base/java.util=ALL-UNNAMED</jvmFlag>
+              <jvmFlag>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</jvmFlag>
+              <jvmFlag>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</jvmFlag>
+            </jvmFlags>
           </container>
         </configuration>
       </plugin>
